[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sender"
version = "0.1.0"
description = "Telegram message automation system"
requires-python = ">=3.10"
dependencies = [
    "croniter",
    "gspread",
    "icontract",
    "more-itertools",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "reretry",
    "supabase",
    "telethon",
    "tg @ git+https://github.com/leshchenko1979/tg.git",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501", "E741"]  # Line too long, ambiguous variable name
